# multi-agent-researcher

./: .env.example  .gitignore  README.md  ai_prompts.py  multi_agent_research.py  pyproject.toml
docs/: README.md  UML_ACTIVITY_DIAGRAM.md  UML_CLASS_DIAGRAM.md  UML_COMPONENT_DIAGRAM.md  UML_SEQUENCE_DIAGRAM.md
