[project]
name = "multi-agent_researcher"
version = "0.1.0"
description = "multi-agent AI system that conducts web research, writes persuasive articles in Portuguese (PT-BR), and performs quality control through iterative editorial review"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.8",
    "duckduckgo-search>=8.1.1",
    "openai>=2.5.0",
    "trafilatura>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.119.0",
    "ddgs>=9.5.2",
]
